plugins {
    id 'org.springframework.boot' version '3.2.4' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

ext {
    set('springCloudVersion', "2023.0.1")
}

allprojects {
    group = 'com.journey'
    version = '0.0.1-SNAPSHOT'
    
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    dependencies {
        // Core Spring Boot
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        
        // Resilience4j
        implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
        
        // Micrometer Tracing
        implementation 'io.micrometer:micrometer-tracing-bridge-brave'
        
        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ['--enable-preview']
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        jvmArgs += ['--enable-preview']
    }
}

// Ensure Rate Limiter uses WebFlux instead of Web MVC
project(':rate-limiter') {
    configurations {
        compileClasspath {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
        }
        runtimeClasspath {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
        }
    }
}
